...
        Text(
            text = "Welcome Enoc Interview",
            fontSize = 24.sp,
            color = Color.Black,
            modifier = Modifier
                .align(Alignment.Center)
                .testTag("welcomeTag")
        )

        // Loading indicator at the bottom of the screen
        CircularProgressIndicator(
            modifier = Modifier
                .align(Alignment.BottomCenter)
...
