...
                                            contentDescription = null,
                                            contentScale = ContentScale.Crop, // Crop to fill the shape
                                            modifier = Modifier.clickable {
//                                    show bottom sheet to select the image ===>
                                                showBottomSheet = true
                                            }.size(100.dp) // Adjust the size as needed
                                                .clip(CircleShape).testTag("select_image_tag_avatar") // Clip the image to a circle
                                        )
                                    } ?: Image(
                                        painter = painter,
                                        contentDescription = null,
                                        contentScale = ContentScale.Crop, // Crop to fill the shape
                                        modifier = Modifier.clickable {
...
                            Spacer(modifier = Modifier.height(16.dp))

                            Text(
                                text = "Email",
                                style = MaterialTheme.typography.bodyMedium,
                                fontWeight = FontWeight.Bold,
                                modifier = Modifier.testTag("user_name_label")
                            )
                            Text(
                                text = loginViewModel.sessionManager.getEmail() ?: user.email,
                                style = MaterialTheme.typography.bodyMedium,
                                modifier = Modifier.padding(bottom = 16.dp)
                            )
...
    }
    // Bottom Sheet
    if (showBottomSheet) {
        ModalBottomSheet(
            onDismissRequest = { showBottomSheet = false },
            sheetState = rememberModalBottomSheetState(),
            modifier = Modifier.testTag("select_image_bottom_sheet")
        ) {
            Column(modifier = Modifier.padding(16.dp)) {
                Text(
                    text = "Select Image",
                    style = MaterialTheme.typography.bodyMedium,
                    modifier = Modifier.padding(bottom = 16.dp)
...
                    showBottomSheet = false
                    if (hasStoragePermission) {
                        galleryLauncher.launch("image/*")
                    } else {
                        storagePermissionLauncher.launch(arrayOf(Manifest.permission.READ_EXTERNAL_STORAGE))
                    }
                }, modifier = Modifier.testTag("select_from_gallery")) {
                    Text("Choose from Gallery")
                }
                Spacer(modifier = Modifier.height(8.dp))
                Button(onClick = {
                    showBottomSheet = false
                    if (hasCameraPermission) {
                        cameraLauncher.launch(null)
                    } else {
                        cameraPermissionLauncher.launch(Manifest.permission.CAMERA)
                    }
                }, modifier = Modifier.testTag("select_from_camera")) {
                    Text("Take Photo")
                }
            }
        }
    }

...
